added example LargeStore